--- a/public/profile.html
+++ b/public/profile.html
@@ -34,7 +34,8 @@
       }
       verifyTokenOrRedirect();
       // Salir button logic
-      document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener("DOMContentLoaded", async function () {
+        const usuario = await obtenerUsuario(localStorage.getItem("usuario"));
         const salirBtn = document.querySelector('a[href="#"]:nth-child(4)');
         if (!localStorage.getItem("token")) {
           salirBtn.style.display = "none";
@@ -51,6 +52,42 @@
           };
         }
       });
+
+       async function obtenerUsuario(nombre) {
+        const respuesta = await fetch(`/api/usuarios/${nombre}`, {
+          method: "GET",
+          headers: {
+            Authorization: "Bearer " + localStorage.getItem("token"),
+            "Content-Type": "application/json",
+          },
+        });
+
+        if (!respuesta.ok) {
+          const error = await respuesta.json();
+          throw new Error(error.error || "Error al obtener usuario");
+        }
+        const resultado = await respuesta.json();
+        return resultado;
+      }
+
+      async function actualizarUsuario(nombre, datos) {
+        const respuesta = await fetch(`/api/usuarios/${nombre}`, {
+          method: "PUT",
+          headers: {
+            Authorization: "Bearer " + localStorage.getItem("token"),
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(datos),
+        });
+
+        if (!respuesta.ok) {
+          const error = await respuesta.json();
+          throw new Error(error.error || "Error al actualizar usuario");
+        }
+        const resultado = await respuesta.json();
+
+        return resultado;
+      }
     </script>
   </body>
 </html>
